# PicChrono

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  NOTICES.md  QUICK_START.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pytests.yml
.github/workflows/: pytests.yml
ImageRename/: __init__.py  __main__.py  renamer.py
image-rename/: __main__.py
pic_chrono/: __main__.py  renamer.py
src/: renamer.py
tests/: test_ImageRename.py  test_renamer.py
tests/test_files/: not_an_image.TXT
